persisted options