@@ -1,16 +1,14 @@
 package com.odde.doughnut.entities.quizQuestions;
 
-import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.odde.doughnut.controllers.dto.QuizQuestion;
 import com.odde.doughnut.entities.*;
 import com.odde.doughnut.factoryServices.ModelFactoryService;
 import com.odde.doughnut.models.Randomizer;
+import com.odde.doughnut.services.ai.MCQWithAnswer;
 import jakarta.persistence.*;
 import java.util.*;
-import java.util.stream.Collectors;
 import lombok.Getter;
 import lombok.Setter;
-import org.apache.logging.log4j.util.Strings;
 
 @Entity
 public abstract class QuizQuestionWithNoteChoices extends QuizQuestionEntity {
@@ -21,41 +19,28 @@ public abstract class QuizQuestionWithNoteChoices extends QuizQuestionEntity {
   @Setter
   private LinkingNote categoryLink;
 
-  @Column(name = "option_thing_ids")
-  @Getter
-  @Setter
-  private String optionNoteIds = "";
-
-  @Column(name = "correct_answer_index")
-  @Getter
-  @Setter
-  private Integer correctAnswerIndex;
-
   public void setChoicesAndRightAnswer(
       Note answerNote, List<? extends Note> options, Randomizer randomizer) {
     List<Note> optionsEntities = new ArrayList<>(options);
     optionsEntities.add(answerNote);
     List<Note> shuffled = randomizer.shuffle(optionsEntities);
-    setCorrectAnswerIndex(shuffled.indexOf(answerNote));
-    setOptionNoteIds(
-        shuffled.stream().map(Note::getId).map(Object::toString).collect(Collectors.joining(",")));
-  }
-
-  @JsonIgnore
-  private List<Integer> getChoiceNoteIds() {
-    if (Strings.isBlank(optionNoteIds)) return List.of();
-    return Arrays.stream(optionNoteIds.split(","))
-        .map(Integer::parseInt)
-        .collect(Collectors.toList());
+    MCQWithAnswer mcqWithAnswer = new MCQWithAnswer();
+    mcqWithAnswer.stem = getStem();
+    mcqWithAnswer.correctChoiceIndex = shuffled.indexOf(answerNote);
+    mcqWithAnswer.choices =
+        shuffled.stream().map(this::noteToChoice).map(QuizQuestion.Choice::getDisplay).toList();
+    setMcqWithAnswer(mcqWithAnswer);
   }
 
   public List<QuizQuestion.Choice> getOptions(ModelFactoryService modelFactoryService) {
-    List<Integer> idList = getChoiceNoteIds();
-    return modelFactoryService
-        .noteRepository
-        .findAllByIds(idList)
-        .sorted(Comparator.comparing(v -> idList.indexOf(v.getId())))
-        .map(this::noteToChoice)
+    MCQWithAnswer mcqWithAnswer = getMcqWithAnswer();
+    return mcqWithAnswer.choices.stream()
+        .map(
+            s -> {
+              QuizQuestion.Choice choice = new QuizQuestion.Choice();
+              choice.setDisplay(s);
+              return choice;
+            })
         .toList();
   }
 
